--- a/index.css
+++ b/index.css
@@ -1,6 +1,11 @@
 .app{
     box-sizing: border-box;
 }
+.body{
+   width:80%;
+   margin:0 auto;
+}
+
 .logo{
     width:56%;
 }
@@ -28,37 +33,45 @@
 
  }
 
- .body{
-    border: 1px solid orange;
- }
  .searchbar{
     margin: 1rem;
     padding: 1rem;
+ } 
+ .searchbar>button:hover{
+   cursor: pointer;
  }
 
  .searchbar>input {
-    width:50%;
+    width:83%;
     height: 50px;
  }
 
  .searchbar>button {
     width:15%;
     height: 56px;
+    background-color: orange;
  }
 
  .card{
-    width:316px;
+    width:314px;
+    height: 350px;
   
  }
 
- .card>img:hover{
-    width:97%;
- }
- .card > img{
-    width:100%;
+
+ .card > img {
+    width:90%;
+    height: 60%;
     border-radius: 20px;
     transition: all 100ms;
  }
+
+ .card > img:hover {
+   transform: scale(0.9, 0.9);
+    -ms-transform: scale(0.9, 0.9);
+    -webkit-transform: scale(0.9, 0.9);
+   cursor: pointer;
+}
 
  /* .res-container {
     display: flex;
@@ -80,4 +93,16 @@
     justify-content: start;
     gap:30px;
     margin:30px;
+ }
+
+ .card > h3 {
+   word-wrap: break-word;
+   margin:0;
+
+ }
+
+ .rating{
+   display: flex;
+   gap:50px;
+    align-items: center;
  }
