--- a/index.css
+++ b/index.css
@@ -1,79 +1,91 @@
-.app{
-    box-sizing: border-box;
-}
-.body{
-   width:80%;
-   margin:0 auto;
+.app {
+   box-sizing: border-box;
 }
 
-.logo{
-    width:56%;
-}
-.header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid orangered;
+.body {
+   width: 80%;
+   margin: 0 auto;
 }
 
+.logo {
+   width: 56%;
+   border-radius: 50%;
+   -webkit-transition: -webkit-transform 0.8s ease-in-out;
+   transition: transform 0.8s ease-in-out;
+}
 
- .nav-item > ul {
-    display: flex;
-    list-style-type: none;
-    
- }
- .nav-item > ul >li {
-    font-size: large;
-    font-weight: bold;
-    padding: 1rem;
- }
+.logo:hover {
+   transform: rotate(360deg);
+}
 
- .nav-item > ul :hover {
+.header {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   border: 1px solid orangered;
+}
+
+
+.nav-item>ul {
+   display: flex;
+   list-style-type: none;
+
+}
+
+.nav-item>ul>li {
+   font-size: large;
+   font-weight: bold;
+   padding: 1rem;
+}
+
+.nav-item>ul :hover {
    cursor: pointer;
 
- }
+}
 
- .searchbar{
-    margin: 1rem;
-    padding: 1rem;
- } 
- .searchbar>button:hover{
+.searchbar {
+   width: 100%;
+   margin: 1rem;
+   padding: 1rem;
+}
+
+.searchbar>button:hover {
    cursor: pointer;
- }
+}
 
- .searchbar>input {
-    width:83%;
-    height: 50px;
- }
+.searchbar>input {
+   width: 83%;
+   height: 50px;
+}
 
- .searchbar>button {
-    width:15%;
-    height: 56px;
-    background-color: orange;
- }
+.searchbar>button {
+   width: 15%;
+   height: 56px;
+   background-color: orange;
+}
 
- .card{
-    width:314px;
-    height: 350px;
-  
- }
+.card {
+   width: 314px;
+   height: 350px;
+
+}
 
 
- .card > img {
-    width:90%;
-    height: 60%;
-    border-radius: 20px;
-    transition: all 100ms;
- }
+.card>img {
+   width: 90%;
+   height: 60%;
+   border-radius: 20px;
+   transition: all 100ms;
+}
 
- .card > img:hover {
+.card>img:hover {
    transform: scale(0.9, 0.9);
-    -ms-transform: scale(0.9, 0.9);
-    -webkit-transform: scale(0.9, 0.9);
+   -ms-transform: scale(0.9, 0.9);
+   -webkit-transform: scale(0.9, 0.9);
    cursor: pointer;
 }
 
- /* .res-container {
+/* .res-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -87,22 +99,40 @@
    
   } */
 
-  .res-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: start;
-    gap:30px;
-    margin:30px;
- }
-
- .card > h3 {
-   word-wrap: break-word;
-   margin:0;
-
- }
-
- .rating{
+.res-container {
    display: flex;
-   gap:50px;
-    align-items: center;
- }
+   flex-wrap: wrap;
+   justify-content: start;
+   gap: 30px;
+   margin: 30px;
+}
+
+.card>h3 {
+   word-wrap: break-word;
+   margin: 0;
+
+}
+
+.rating {
+   display: flex;
+   gap: 50px;
+   align-items: center;
+}
+
+.toolbar {
+   display: flex;
+   align-items: center;
+}
+
+.toolbar>button {
+   height: 59px;
+   width: 20%;
+   border-radius: 50%;
+   background-color: orange;
+}
+
+.toolbar>button:hover {
+   cursor: pointer;
+   transition: transform 0.8s ease-in-out;
+   transform: rotate(360deg);
+}
