--- a/index.css
+++ b/index.css
@@ -62,6 +62,7 @@
    width: 15%;
    height: 56px;
    background-color: orange;
+   border: 0;
 }
 
 .card {
@@ -79,10 +80,11 @@
 }
 
 .card>img:hover {
+   cursor: pointer;
    transform: scale(0.9, 0.9);
    -ms-transform: scale(0.9, 0.9);
    -webkit-transform: scale(0.9, 0.9);
-   cursor: pointer;
+   
 }
 
 /* .res-container {
@@ -129,6 +131,7 @@
    width: 20%;
    border-radius: 50%;
    background-color: orange;
+   border: 0;
 }
 
 .toolbar>button:hover {
@@ -157,4 +160,14 @@
    align-items: center;
    height: 100px;
    gap:5%;
+}
+
+.errorpage{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   color: red;
+   height: 50vh;
+   
 }
