--- a/index.css
+++ b/index.css
@@ -66,20 +66,21 @@
 }
 
 .card {
-   width: 314px;
+   /* width: 314px; */
+   width:23%;
    height: 350px;
 
 }
 
 
-.card>img {
+.card> a >img {
    width: 90%;
    height: 60%;
    border-radius: 20px;
    transition: all 100ms;
 }
 
-.card>img:hover {
+.card> a > img:hover {
    cursor: pointer;
    transform: scale(0.9, 0.9);
    -ms-transform: scale(0.9, 0.9);
@@ -149,7 +150,7 @@
 }
 
 .shimmer-card{
-   width: 314px;
+   width: 23%;
    height: 350px;
    border-radius: 20%;
    background-color:#f4c6b636
@@ -170,4 +171,39 @@
    color: red;
    height: 50vh;
    
+}
+
+.react-link {
+   text-decoration: none;
+   color: black;
+}
+
+.detail-container{
+   width: 85%;
+   margin: auto;
+   
+}
+
+.res-info{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+
+.res-menu{
+   width: 50%;
+   margin:auto;
+}
+
+.menu-title{
+   text-decoration: underline;
+   color: #d53f09;
+}
+
+.res-container > a {
+   flex-wrap: wrap;
+   justify-content: start;
+   gap: 30px;
+   margin: 30px;
+   display: flex;
 }
