--- a/index.css
+++ b/index.css
@@ -179,6 +179,7 @@
 }
 
 .detail-container{
+   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    width: 85%;
    margin: auto;
    
@@ -188,6 +189,7 @@
    display: flex;
    flex-direction: column;
    align-items: center;
+   box-shadow: #d53f09 0px 5px 15px;
 }
 
 .res-menu{
@@ -207,3 +209,4 @@
    margin: 30px;
    display: flex;
 }
+
